Fix spacing in card component

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -66,7 +66,9 @@
     font-weight: var(--font-weight-light);
     box-shadow: 0 0 0 0.1rem var(--color-gray);
     background-color: var(--color-pill-background);
-    transition: background-color 0.2s ease-out, color 0.2s ease-out;
+    transition:
+      background-color 0.2s ease-out,
+      color 0.2s ease-out;
 
     &:is(a, button) {
       &:hover,
@@ -125,7 +127,8 @@
     --basic-link-secondary: var(--color-highlight-hover);
     text-decoration: none;
     background-color: transparent;
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         to bottom,
         var(--basic-link-secondary),
         var(--basic-link-secondary)
@@ -136,14 +139,18 @@
         var(--basic-link-primary)
       );
     background-repeat: no-repeat;
-    background-size: 100% 35%, 100% 8%;
+    background-size:
+      100% 35%,
+      100% 8%;
     background-position: bottom;
     transition: background-size 0.05s ease-out;
 
     &:hover,
     &:focus-visible,
     &[aria-current='page'] {
-      background-size: 100% 100%, 100% 8%;
+      background-size:
+        100% 100%,
+        100% 8%;
       text-decoration-color: var(--basic-link-primary);
     }
   }
@@ -153,7 +160,9 @@
   a:has(.basic-link):hover,
   a:has(.basic-link):focus-visible {
     .basic-link {
-      background-size: 100% 100%, 100% 8%;
+      background-size:
+        100% 100%,
+        100% 8%;
       text-decoration-color: var(--basic-link-primary);
     }
   }
@@ -338,10 +347,10 @@
   * {
     text-wrap: pretty;
     font-weight: var(--font-weight-light);
+  }
 
-    + * {
-      margin-block-start: 1em;
-    }
+  > * + * {
+    margin-block-start: 1em;
   }
 
   a {
